<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bolme"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/main_button"
        android:text="@string/bolme"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carpma" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/kapat"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/main_button"
        android:text="@string/kapat"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/carpma"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/main_button"
        android:text="@string/carpma"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cikartma" />

    <TextView
        android:id="@+id/ust_baslik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ust_baslik"
        android:textAlignment="center"
        android:textSize="24sp"
        android:background="@drawable/main_button"
        android:padding="15dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/toplamabtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/main_button"
        android:text="@string/toplama"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ust_baslik" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cikartma"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/main_button_normal"
        android:text="@string/cikartma"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toplamabtn" />

</androidx.constraintlayout.widget.ConstraintLayout>